--- a/config/config.yaml
+++ b/config/config.yaml
@@ -105,3 +105,13 @@ platforms:
     name: "雪球"
   - id: "weibo"
     name: "微博"
+  - id: "cls"
+    name: "财联社"
+  - id: "36kr"
+    name: "36氪"
+  - id: "jin10"
+    name: "金十数据"
+  - id: "eastmoney"
+    name: "东方财富"
+  - id: "caixin"
+    name: "财新网"
